# helloFlask

./: Demarche.odt  Docker_file_app_web.odt  Dockerfile  base.db  create_database.py  my_app.py  pyproject.toml
templates/: about.html  form.html  home.html
